--- a/resources/static_gen3_fixtures/_program.yaml
+++ b/resources/static_gen3_fixtures/_program.yaml
@@ -39,3 +39,6 @@ properties:
   dbgap_accession_number:
     type: string
     description: "The dbgap accession number provided for the program."
+  default_bucket:
+    type: string
+    description: "The Gen3 managed bucket projects in this program will use."
