--- a/tests/integration/data/schemas/location.yaml
+++ b/tests/integration/data/schemas/location.yaml
@@ -267,7 +267,6 @@ properties:
     type: string
   resourceType:
     const: Location
-    default: Location
     description: One of the resource types defined as part of FHIR
     title: Resource Type
     type: string
@@ -338,5 +337,9 @@ properties:
       type: string
     title: Connection details of a virtual service (e.g. conference call)
     type: array
+systemProperties:
+- id
 title: Location
 type: object
+uniqueKeys:
+- - id
