--- a/tests/integration/data/schemas/research_subject.yaml
+++ b/tests/integration/data/schemas/research_subject.yaml
@@ -132,7 +132,6 @@ properties:
     type: string
   resourceType:
     const: ResearchSubject
-    default: ResearchSubject
     description: One of the resource types defined as part of FHIR
     title: Resource Type
     type: string
@@ -177,5 +176,9 @@ properties:
     - BiologicallyDerivedProduct
     title: Who or what is part of study
     type: string
+systemProperties:
+- id
 title: ResearchSubject
 type: object
+uniqueKeys:
+- - id
