--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 
 # CLI processor
-click==8.1.7
+click
 
 # faster json
 orjson==3.9.5
@@ -12,7 +12,8 @@ inflection==0.5.1
 fhir.resources==7.0.2
 
 # yaml
-PyYAML==6.0.1
+# gdcdictionary 1.2.0 requires PyYAML~=5.1, but you have pyyaml 6.0.1 which is incompatible.
+PyYAML  # ==6.0.1
 
 # Python functions for flattening a JSON object to a single dictionary of pairs, and unflattening that dictionary back to a JSON object
 flatten-json==0.1.13
@@ -21,7 +22,7 @@ flatten-json==0.1.13
 dataclass-csv==1.4.0
 
 # data dictionary and PFB
-gen3==4.22.2
+# gen3==4.22.2
 
 # faster requests
 requests==2.31.0
