--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ orjson==3.9.5
 # pluralization
 inflection==0.5.1
 
-# fhir model
-fhir.resources==7.0.2
+# fhir model, 7.1.0 is a breaking change - pydantic2
+fhir.resources==7.1.0
 
 # yaml
 # gdcdictionary 1.2.0 requires PyYAML~=5.1, but you have pyyaml 6.0.1 which is incompatible.
